# mcp-ai-agent-app-leap

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  LICENSE  MCP Assistant vs MCP Builder.md  MCP Readme-Build.md  MCP-Builder.md  NETLIFY_DEPLOYMENT.md  README.md  README_BUILD.md  SECURITY.md  netlify.toml  package-lock.json
mcp-server-builder/: README.md  example-config.json  example-config.yaml  pyproject.toml  pytest-performance.ini  requirements.txt  run_api.py  run_performance_tests.py
mcp-server-builder/api/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  config.py  main.py  models.py  progress_integration.py  requirements.txt  services.py  test_api.py  validation_service.py  websocket_manager.py
mcp-server-builder/docs/: advanced-configuration.md  api-reference.md  faq.md  getting-started.md  output_formatting.md  template-development-guide.md  troubleshooting.md  tutorials.md  validation_reporting.md
mcp-server-builder/examples/: output_formatting_demo.py  project_orchestration_example.py  simple_validation_demo.py  template-examples.md  validation_reporting_demo.py
mcp-server-builder/src/: __init__.py
mcp-server-builder/tests/: __init__.py  test_artifact_manager.py  test_build_artifact_integration.py  test_build_system.py  test_build_system_artifacts.py  test_cli_integration.py  test_cli_validators.py  test_comprehensive_test_cli.py  test_comprehensive_testing.py  test_config_loader.py  test_dependency_manager.py  test_dependency_verification_integration.py  test_error_handler.py  test_models.py  (+15 more)
(+95 files in other folders)
